apps/demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
